# torscraper

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
src/: scraper.py
torscraper/: __init__.py  logger.py  scraper.py  user_agents.py
torscraper/caching/: __init__.py  base_cacher.py  file_cacher.py  pickle_cacher.py  text_cacher.py
torscraper/src/: scraper.py  session.py
